--- a/Project4.ipynb
+++ b/Project4.ipynb
@@ -94,7 +94,7 @@
     "**Additionals**\n",
     "* National annual CPI\n",
     "* National annual real GDP growth rate\n",
-    "* Sate monthly umemployment rate"
+    "* State monthly umemployment rate"
    ]
   },
   {
@@ -455,7 +455,7 @@
     "gdp = pd.read_csv('data/US_GDP.csv')#, index_col=0) # national\n",
     "gdp['gdp_growth'] = gdp['Value'].pct_change()*100\n",
     "\n",
-    "### Sate monthly umemployment rate\n",
+    "### State monthly umemployment rate\n",
     "unemployment = pd.read_csv('data/US_statewide_unemployment_rate.csv')#, index_col=0) # state"
    ]
   },
@@ -1817,41 +1817,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interest rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1. Volume and Count"
    ]
   },
@@ -2397,7 +2362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. 　Loan grade & subgrade"
+    "## 4. Loan grade & subgrade"
    ]
   },
   {
@@ -2874,7 +2839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Purpose"
+    "## 5. Purpose"
    ]
   },
   {
@@ -6935,7 +6900,7 @@
    "source": [
     "**Potential variables**  \n",
     "Selected based on combinantion of:\n",
-    "1. analysis in previous analysis (EAD)\n",
+    "1. analysis in previous analysis (EDA)\n",
     "2. industry experience"
    ]
   },
@@ -12629,7 +12594,7 @@
     "\n",
     "Negative coefficients:\n",
     "1. GDP growth%\n",
-    "2. Unemployment rate 0 this is a surprising result. Probably because of lagging effect."
+    "2. Unemployment rate - this is a surprising result. Probably because of lagging effect."
    ]
   },
   {
@@ -13481,7 +13446,7 @@
    "source": [
     "## Next Step\n",
     "\n",
-    "Try more advanced models to increase prediction power."
+    "Trian and tun more advanced models to increase prediction power."
    ]
   },
   {
